--- a/WebDev/2A-WebDev/index.html
+++ b/WebDev/2A-WebDev/index.html
@@ -3,10 +3,242 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Assignment 1</title>
+    <link href="StyleSheet.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+
 </head>
-<body>
-hi    
-</body>
-</html>
+<body >
+    
+    <!-- container div -->
+    <div class="container-fluid text-center" dir="rtl">
+
+        <!-- first row -->
+        <div class="row mb-3">
+            <div class="col bg-secondary">
+                <h1 class="text-white mt-4 mb-4">
+                    קורס פיתוח מערכות אינטרנטיות - צד לקוח (Front developer)
+                </h1>
+            </div>
+        </div>
+
+        <!-- second row -->
+        <div class="row mb-4 flex-row-reverse g-3">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+
+                <!-- HTML section -->
+                <div class="card">
+                    <div class=" card-body text-end">
+                        <h2 class="card-header text-center text-white bg-danger"> HTML(HyperText Markup Language)</h2>
+                        <p class="card-text lh-lg">
+                            <strong>HTML</strong>
+                            שפה המשמשת לתצוגה של תוכן באתרי אינטרנט. למרות ש-
+                            <strong>HTML</strong>
+                            <br>
+                            לא נחשבת לשפת תכנות אלא לשפת סימון
+                            (<strong>Markup language</strong>),
+                            היא עדיין
+                            <br>
+                            מאוד חשובה מכיוון שהיא משמשת כ”שלד” של רוב עמודי האינטרנט בעולם.
+                            <br>
+                            על מנת להוסיף טקסט, תמונות או כל מדיה אחרת לדף אינטרנט מסוים,
+                            <br>
+                            משתמשים ב-
+                            <strong>HTML</strong>.
+                            בעצם, כל מה שהמשתמש רואה באתר מקבל את
+                            <br>
+                            המאפיינים הבסיסיים שלו מקוד ה-
+                            <strong>HTML</strong>.
+                        </p>
+                        <h5 class="card-title">לינקים שימושיים</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-ite"> <a href="https://www.w3schools.com/html/"> W3schools html</a></li>
+                            <li class="list-group-ite">
+                                <a href="https://stackoverflow.com/questions/tagged/html">
+                                    StackOverFlow - [HTML] Question
+                                </a>
+                            </li>
+                        </ul>
+
+                        <!-- hidden div -->
+                        <div class="d-none d-md-block border border-danger">
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> <h6>לינק למידע</h6></div>
+                                <div class="col-6 border-start border-danger"> <h6>גרסאות מתקדמות</h6></div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6">
+                                    <a href="https://internet-israel.com/%D7%A4%D7%99%D7%AA%D7%95%D7%97-%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%A0%D7%98/%D7%91%D7%A0%D7%99%D7%99%D7%AA-%D7%90%D7%AA%D7%A8%D7%99-%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%A0%D7%98-%D7%9C%D7%9E%D7%A4%D7%AA%D7%97%D7%99%D7%9D/%D7%A2%D7%9C-%D7%94%D7%94%D7%91%D7%93%D7%9C-%D7%91%D7%99%D7%9F-html-%D7%9C-xhtml/">
+                                        ההבדל בין xhtml לhtml
+                                    </a>
+                                </div>
+                                <div class="col-6 border-start border-danger">XHTML</div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> <a href="https://webmaster.org.il/html5/"> מדריך לHTML5</a></div>
+                                <div class="col-6 border-start border-danger">HTML5</div>
+
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-sm-6 col-lg-4">
+                <!-- CSS section -->
+                <div class="card">
+                    <div class=" card-body text-end">
+                        <h2 class="card-header text-center text-white bg-primary">CSS(Cascading Style Sheets) </h2>
+                        <p class="card-text lh-lg">
+                            <strong>CSS</strong>
+                            שפה שבה משתמשים כדי לעצב
+                            אתרי אינטרנט. בעוד ש-
+                            <strong>HTML</strong>
+                            יוצרת
+                            <br>
+                            את המבנה ואת התוכן של האתר כמו פסקאות, כותרות ותמונות,
+                            <strong>CSS</strong>
+                            לוקחת
+                            <br>
+                            את האלמנטים האלה וגורמת להם להיראות טוב.
+                        </p>
+
+
+                        <h5 class="card-title"> לינקים שימושיים</h5>
+
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-ite"> <a href="https://www.w3schools.com/css/default.asp"> W3schools CSS</a></li>
+                            <li class="list-group-ite"> <a href="https://stackoverflow.com/questions/tagged/css"> StackOverFlow - [CSS] Question</a></li>
+                        </ul>
+
+                        <!-- hidden div -->
+                        <div class="d-none d-md-block border border-primary">
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> <h6>לינק למידע</h6></div>
+                                <div class="col-6 border-start border-primary"> <h6>גרסאות מתקדמות</h6></div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6">
+                                    <a href="https://www.freecodecamp.org/news/tag/css3/">מדריך CSS3</a>
+                                </div>
+                                <div class="col-6 border-start border-primary">CSS3</div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> בתהליכי התפתחות</div>
+                                <div class="col-6 border-start border-primary">CSS4</div>
+
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class=" col-sm-6 col-lg-4">
+                <!-- JS section -->
+                <div class="card">
+                    <div class=" card-body text-end">
+                        <h2 class="card-header text-center text-white bg-success">JS(Java Script) </h2>
+                        <p class="card-text lh-lg">
+                            <strong>JS</strong>
+                            שפת תכנות זו נועדה לפיתוח אלמנטים דינמיים
+                            של אתרי אינטרנט בצד
+                            <br>
+                            הלקוח (פרונטאנד), אך לאחרונה
+                            <strong>JavaScript</strong>
+                            הופכת שימושית יותר ויותר גם
+                            <br>
+                            לפיתוח
+                            <strong>Backend</strong>
+                            (צד השרת) באמצעות טכנולוגיית
+                            <strong>Node.js</strong>.
+                        </p>
+                        <h5 class="card-title">לינקים שימושיים</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-ite"> <a href="https://www.w3schools.com/css/default.asp"> W3schools JS</a></li>
+                            <li class="list-group-ite"> <a href="https://stackoverflow.com/questions/tagged/css"> StackOverFlow - [JS] Question</a></li>
+                        </ul>
+
+                        <!-- hidden div -->
+                        <div class="d-none d-md-block border border-success">
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> <h6>לינק למידע</h6></div>
+                                <div class="col-6 border-start border-success"> <h6>גרסאות מתקדמות</h6></div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6">
+                                    <a href="https://dev.to/aryclenio/the-new-features-of-javascript-in-2020-es11-7jc">אלמנטי ES11</a>
+                                </div>
+                                <div class="col-6 border-start border-success">ES11</div>
+
+                            </div>
+
+                            <div class="row flex-row-reverse">
+                                <div class="col-6"> <a href="https://dev.to/naimlatifi5/ecmascript-2021-es12-new-features-2l67">אלמנטי ES12</a></div>
+                                <div class="col-6 border-start border-success">ES12</div>
+
+                            </div>
+
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+
+
+
+
+
+        <!-- third row -->
+        <div class="row bg-secondary mt-4 mb-4">
+            <h1 class="text-white">עוד שפות פופולריות</h1>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/3d-c-programming-language-logo-free-png.png" />
+            </div>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/csharp.png" />
+            </div>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/Java_programming_language_logo.svg.png" />
+            </div>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/react.png" />
+            </div>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/sql-5.png" />
+            </div>
+            <div class="col-4 col-md-2 col-lg-2">
+                <img src="images/Python-logo-notext.svg.png" />
+            </div>
+        </div>
+
+        </div>
+
+        </body>
+
