added pong pics & minor tweaks

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -45,7 +45,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/GitHubFox.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -74,13 +74,13 @@
 
             <div class="row home-content__main">
 
-                <h3>Hello                            There</h3>
+                <h3>Hello There</h3>
 
                 <h1>
                     We are <br>
-                    Omer Shachar & Aviv Itzhak. <br>
-                    Students in Ruppin college, <br>
-                    coders and future builders. <br>
+                    Omer & Aviv <br>
+                    This is our website <br>
+                    We write code and staff... <br>
                 </h1>
 
                 <div class="home-content__buttons">
@@ -142,7 +142,7 @@
                 <p class="big_font">These days, we are in our second year of our Computer Science degree, continuing to expand our knowledge and technical skills.
                 We have experience with languages such as C and C#, and have also been introduced to Python. At the moment,
                 we are focusing on Java, alongside core web technologies like HTML, CSS, and JavaScript. As we progress,
-                we’re constantly exploring new concepts, strengthening our problem-solving abilities,
+                we're constantly exploring new concepts, strengthening our problem-solving abilities,
                 and building a solid foundation for both software development and future specialization in the tech world.</p>
 
  
@@ -283,9 +283,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/PongWithIssuesPics/Home.png" class="thumb-link" title="PongWithIssues" data-size="1050x700">
-                                <img src="images/portfolio/PongWithIssuesPics/Home.png" 
-                                     srcset="images/portfolio/PongWithIssuesPics/Home.png, images/portfolio/PongWithIssuesPics/Home.png" alt="">
+                            <a href="images/portfolio/PongWithIssuesPics/PongCombined.png" class="thumb-link" title="PongWithIssues" data-size="876x700">
+                                <img src="images/portfolio/PongWithIssuesPics/PongCombined.png" 
+                                     srcset="images/portfolio/PongWithIssuesPics/Pongception.png, images/portfolio/PongWithIssuesPics/Pongception.png" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -596,7 +596,7 @@
                     </div>
 
                     <div>
-                        <img src="images/profile images/WhatsApp Image 2025-11-30 at 20.55.38_d046f840.jpg" class="profile-img" />
+                        <img src="images/profile images/Omer profile.jpg" class="profile-img" />
                     </div>
                     <br>
                     <div>
