fixed footer weird spaces

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -589,63 +589,30 @@
                     <div class="profile-box">
                         <img src="images/profile images/Aviv profile.jpg" class="profile-img" />
                         <div class="icons" >
-                        <div>
-                            <a href="https://github.com/aviv-itzhak"><i class="fa-brands fa-github"></i><span>Git</span></a>
-
-                        </div>
-                           <div>
-                               <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
-                           </div>
+                            <div>
+                                <a href="https://github.com/aviv-itzhak"><i class="fa-brands fa-github"></i> <span>Github</span></a>
+                            </div>
+                            <div>
+                                <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="line"></div>
 
                     <div class="profile-box">
-                        <img src="images/profile images/WhatsApp Image 2025-11-30 at 20.55.38_d046f840.jpg" class="profile-img" />
+                        <img src="images/profile images/Omer profile.jpg" class="profile-img" />
                         <div class="icons" >
                             <div>
-                                <a href="https://github.com/omershachar"><i class="fa-brands fa-github"></i> <span>Git</span></a>
-
+                                <a href="https://github.com/omershachar"><i class="fa-brands fa-github"></i> <span>Github</span></a>
                             </div>
-                         <div>
-                    <div>
-                        <img src="images/profile images/Omer profile.jpg" class="profile-img" />
-                    </div>
-                    <br>
-                    <div>
-
-                             <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
-                         </div>
-
-
+                            <div>
+                                <a href="www.linkedin.com/in/aviv-itzhak-904554174"> <i class="fa-brands fa-linkedin"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 
-                <!--<ul class="footer-social">
-                    <li><a href="#0">
-                        <i class="fa-brands fa-github"></i>
-                        <span>Git</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
-                    </a></li>
-                    <li><a href="#0">
-                        <i class="im im-pinterest" aria-hidden="true"></i>
-                        <span>Pinterest</span>
-                    </a></li>
-                </ul>-->
-                    
             </div>
         </div>
 
