added the closet project, minor issues

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -280,6 +280,36 @@
             <div class="masonry">
 
                 <div class="masonry__brick">
+                    <div class="item-folio__thumb">
+                        <a href="images/portfolio/ClosetPics/DancingCloset.png" class="thumb-link" title="Closet" data-size="876x700">
+                            <img src="images/portfolio/ClosetPics/DancingCloset.png" alt="">
+                            <span class="shadow-overlay"></span>                                 
+                        </a>
+                    </div>
+
+                    <div class="item-folio__text">
+                        <h3 class="item-folio__title" style="color: red;">
+                            <!-- The Closet Assignment -->
+                        </h3>
+                        <p class="item-folio__cat" style="color: red;">
+                            The Closet Assignment
+                        </p>
+                    </div>
+
+                        <a href="https://github.com/omershachar" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>
+                                Its a closet
+                            </p>
+                            <a href="https://github.com/omershachar">Click For Closet Time</a>
+                        </div>
+
+                </div>
+
+                <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
