edited text to be more sound

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -77,15 +77,14 @@
                 <h3>Hello There</h3>
 
                 <h1>
-                    We are <br>
-                    Omer & Aviv <br>
-                    This is our website <br>
-                    We write code and staff... <br>
+                    We are Omer &amp; Aviv.<br>
+                    Computer Science students.<br>
+                    We design, build and debug code.<br>
                 </h1>
 
                 <div class="home-content__buttons">
                     <a href="#works" class="smoothscroll btn btn--stroke">
-                        Latest Projects
+                        View our work
                     </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Me
@@ -129,23 +128,24 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Us</h1>
-                <p class="lead">We are two computer science students who have always had a natural passion for technology. One of us served in the army as an IT specialist, where he was exposed to the world of computers and coding on a deeper level, and today works in IT in a civilian company. The other works in QA, with a strong interest in automation, testing, and improving software quality. Together,
-                we share a love for technology, continuous learning, and building tools that help solve real-world problems.</p>
+                <p class="lead">We are two computer science students with a natural passion for technology.
+                    One of us served in the army as an IT specialist, where he was exposed to the world of computers and coding on a deeper level, and today works in IT in a civilian company.
+                    The other works in QA, with a strong interest in automation, testing, and software quality.
+                    Together we share a love for technology, continuous learning, and building tools that help solve real-world problems.
+                </p>
             </div>
         </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>⭐ These Days! ⭐ </h3>
-
-                <p class="big_font">These days, we are in our second year of our Computer Science degree, continuing to expand our knowledge and technical skills.
-                We have experience with languages such as C and C#, and have also been introduced to Python. At the moment,
-                we are focusing on Java, alongside core web technologies like HTML, CSS, and JavaScript. As we progress,
-                we're constantly exploring new concepts, strengthening our problem-solving abilities,
-                and building a solid foundation for both software development and future specialization in the tech world.</p>
-
- 
+                <h3>These Days</h3>
+                <p class="big_font">Right now we are in our second year of a Computer Science degree at Ruppin.
+                    We have experience with C and C#, have been introduced to Python, and are currently focusing on Java,
+                    alongside core web technologies like HTML, CSS, and JavaScript.
+                    We are constantly improving our problem-solving skills and building a solid foundation
+                    for future work in software development and related fields.
+                </p>
             </div>
 
             <div class="col-six tab-full right">
@@ -184,10 +184,10 @@
         <div class="row about-content about-content--buttons">
 
             <div class="col-six tab-full left">
-                <a href="#0" class="btn btn--primary full-width">Download My CV</a>
+                <a href="#works" class="btn btn--primary full-width">View Our Projects</a>
             </div>
             <div class="col-six tab-full right">
-                <a href="#0" class="btn full-width">Hire Me Now</a>
+                <a href="#contact" class="btn full-width">Contact Us</a>
             </div>
 
         </div> <!-- end about-content buttons -->
@@ -195,7 +195,7 @@
         <div class="row about-content about-content--timeline">
 
             <div class="col-full text-center">
-                <h3>My Work Experience.</h3>
+                <h3>Our Experience &amp; Studies</h3>
             </div>
 
             <div class="col-six tab-full left">
@@ -204,24 +204,30 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2015 - Present</p>
-                            <h3>Awesome Studio</h3>
-                            <h5>Lead Designer</h5>
+                            <p class="timeline__timeframe">2020 - 2023</p>
+                            <h3>IDF</h3>
+                            <h5>IT Specialist</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            <p>
+                                Responsible for technical support, troubleshooting, and maintaining systems and networks.
+                                This is where the first serious exposure to infrastructure and real-world IT problems began.
+                            </p>
                         </div>
                     </div> <!-- end timeline__block -->
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2014 - June 2015</p>
-                            <h3>Super Cool Agency</h3>
-                            <h5>Front-end Developer</h5>
+                            <p class="timeline__timeframe">2023 - Present</p>
+                            <h3>Civilian Company</h3>
+                            <h5>IT &amp; Support</h5>
                         </div>
                         <div class="timeline__desc">	
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                            <p>
+                                Continuing to work in IT in the civilian world: supporting users, managing systems,
+                                and staying close to the technical side while studying computer science.    
+                            </p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -234,24 +240,30 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2012 - June 2014</p>
-                            <h3>Great Design Studio</h3>
-                            <h5>Web Designer</h5>
+                            <p class="timeline__timeframe">2021 - Present</p>
+                            <h3>Software Company / QA Team</h3>
+                            <h5>QA &amp; Testing</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                            <p>
+                                Working in QA with a strong focus on testing, reporting bugs,
+                                and learning how real products are built, deployed, and improved over time.
+                            </p>
                         </div>
                     </div> <!-- end timeline__block -->
 
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">July 2011 - June 2012</p>
-                            <h3>Epic Design Agency</h3>
-                            <h5>Web Designer</h5>
+                            <p class="timeline__timeframe">2024 - Present</p>
+                            <h3>Ruppin Academic Center</h3>
+                            <h5>B.Sc. Computer Science</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+                            <p>
+                                Studying data structures, algorithms, math, and software development.
+                                Many of the projects in this portfolio started as course assignments and evolved into real practice.
+                            </p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -270,9 +282,9 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Portfolio</h3>
-                <h1>See My Latest Projects.</h1>
+                <h1>See Our Latest Projects.</h1>
                 
-                <p class="lead">Omer projects</p>
+                <p class="lead">A mix of academic assignments, side projects, and experiments we build while learning.</p>
             </div>
         </div>
 
