--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -181,16 +181,16 @@
 
         </div> <!-- end about-content -->
 
-        <div class="row about-content about-content--buttons">
+<!--        <div class="row about-content about-content&#45;&#45;buttons">-->
 
-            <div class="col-six tab-full left">
-                <a href="#0" class="btn btn--primary full-width">Download My CV</a>
-            </div>
-            <div class="col-six tab-full right">
-                <a href="#0" class="btn full-width">Hire Me Now</a>
-            </div>
+<!--            <div class="col-six tab-full left">-->
+<!--                <a href="#0" class="btn btn&#45;&#45;primary full-width">Download My CV</a>-->
+<!--            </div>-->
+<!--            <div class="col-six tab-full right">-->
+<!--                <a href="#0" class="btn full-width">Hire Me Now</a>-->
+<!--            </div>-->
 
-        </div> <!-- end about-content buttons -->
+<!--        </div> &lt;!&ndash; end about-content buttons &ndash;&gt;-->
 
         <div class="row about-content about-content--timeline">
 
@@ -407,8 +407,9 @@
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Journal</h3>
-                <h1>Latest Tech Shit that we like.</h1>
-                <p class="lead">Blog staff. Maybe put articles here that we like?</p>
+<!--                <h1>Latest Tech Shit that we like.</h1>-->
+                <h1>Stuff We’re Into Lately</h1>
+                <p class="lead">A collection of podcasts, books, tools, and random tech gems we can’t shut up about.</p>
             </div>
         </div>
 
