added Aviv's project

--- a/WebDev/3A-WebDev/Hola10/index.html
+++ b/WebDev/3A-WebDev/Hola10/index.html
@@ -292,21 +292,24 @@
             <div class="masonry">
 
                 <div class="masonry__brick">
-                    <div class="item-folio__thumb">
-                        <a href="images/portfolio/ClosetPics/DancingCloset.png" class="thumb-link" title="Closet" data-size="876x700">
-                            <img src="images/portfolio/ClosetPics/DancingCloset.png" alt="">
-                            <span class="shadow-overlay"></span>                                 
-                        </a>
-                    </div>
+                    <div class="item-folio">
 
-                    <div class="item-folio__text">
-                        <h3 class="item-folio__title" style="color: red;">
-                            The Closet
-                        </h3>
-                        <p class="item-folio__cat" style="color: red;">
-                            C# Desktop Application
-                        </p>
-                    </div>
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/TamamApp.jpg" class="thumb-link" title="Closet" data-size="700x700">
+                                <img src="images/portfolio/TamamApp.jpg" 
+                                     srcset="images/portfolio/TamamApp.jpg, images/portfolio/TamamApp.jpg" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                TamamApp
+                            </h3>
+                            <p class="item-folio__cat">
+                                It's an app that Aviv needs to what it does because i forgot what he said
+                            </p>
+                        </div>
 
                         <a href="https://github.com/omershachar" class="item-folio__project-link" title="Project link">
                             <i class="im im-link"></i>
@@ -314,19 +317,19 @@
 
                         <div class="item-folio__caption">
                             <p>
-                                A C# “digital closet” assignment turned into a structured app:
-                                users, clothing items, ads, and events – all modeled with OOP, validation, and clean code.
+                                Here Aviv need to describe the app
                             </p>
                             <a href="https://github.com/omershachar">View Repository</a>
                         </div>
 
-                </div>
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
 
                 <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/PongWithIssuesPics/PongCombined.png" class="thumb-link" title="PongWithIssues" data-size="876x700">
+                            <a href="images/portfolio/PongWithIssuesPics/PongCombined.png" class="thumb-link" title="PongWithIssues" data-size="700x700">
                                 <img src="images/portfolio/PongWithIssuesPics/PongCombined.png" 
                                      srcset="images/portfolio/PongWithIssuesPics/Pongception.png, images/portfolio/PongWithIssuesPics/Pongception.png" alt="">
                                 <span class="shadow-overlay"></span>
@@ -352,6 +355,41 @@
                                 and visual effects. Built mainly to practice OOP, game loops, and physics – and to have fun breaking it.
                             </p>
                             <a href="https://github.com/omershachar/PongWithIssues">View Repository</a>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/ClosetPics/Home.png" class="thumb-link" title="Closet" data-size="700x700">
+                                <img src="images/portfolio/ClosetPics/DancingCloset.png" 
+                                     srcset="images/portfolio/ClosetPics/DancingCloset.png, images/portfolio/ClosetPics/DancingCloset.png" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                The Closet
+                            </h3>
+                            <p class="item-folio__cat">
+                                C# Desktop Application
+                            </p>
+                        </div>
+
+                        <a href="https://github.com/omershachar" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <div class="item-folio__caption">
+                            <p>
+                                A C# “digital closet” assignment turned into a structured app:
+                                users, clothing items, ads, and events – all modeled with OOP, validation, and clean code.
+                            </p>
+                            <a href="https://github.com/omershachar">View Repository</a>
                         </div>
 
                     </div> <!-- end item-folio -->
